# Galaxy-Collision-with-CUDA-FFT

./: .gitignore  3D_Array_Create_Populate.2.0.c  3D_Array_Create_Populate.3.0.c  3D_Array_Create_Populate.c  AGENT.md  CUDAfft.1.0.c  CUDAfft.cu  CUDAfft2.0.c  CUDAfft2.0.cu  NOTICE  Numerical_Differentiator.1.0.c  Numerical_Differentiator.2.0.c  Particle_Array.1.0.c  Potential_Array.1.0.c  README.md  Test2.c  densA_particleA.1.0.c  densA_particleA.2.0.c  densA_particleA.3.0.c  densA_particleA.4.0.c  final_draft1.cu  pyproject.toml  test1.c
.github/workflows/: ci.yml
configs/: paper_2v.yaml  paper_4v.yaml  paper_4v_2500Myr.yaml  plummer.yaml  smoke.yaml
docs/: development.md  gpu_setup.md  paper_reproduction.md  performance.md  stage5_plan.md  stage6_plan.md  stage7_plan.md  visualization.md
legacy/: CUDAfft2.0.cu  Multi-Parallel-CUDA-FFT.cu  README.md  final_draft1.cu
scripts/: setup_gpu_env.sh
src/galaxy_collision/: __init__.py  backend.py  bench.py  config.py  data.py  deposit.py  diagnostics.py  diagnostics_device.py  ic.py  integrator.py  io.py  progress.py  sim.py  units.py
src/galaxy_collision/solver/: __init__.py  base.py  fft_oracle.py  multigrid.py
src/galaxy_collision/viz/: __init__.py  movie.py  paper_repro.py  project.py  serve.py  viewer.py
tests/: conftest.py  test_backend.py  test_config.py  test_data.py  test_deposit.py  test_determinism.py  test_diagnostics.py  test_equilibrate.py  test_hello_sim.py  test_ic.py  test_integrator.py  test_io.py  test_movie.py  test_progress.py  test_project.py  test_serve.py  test_sim.py  test_solver_fft.py  test_solver_multigrid.py  test_units.py  test_viewer.py  test_viz.py
