[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galaxy-collision"
version = "0.0.0"
description = "Cross-platform Particle-Mesh N-body simulation of a Milky Way x Andromeda galaxy collision (CPU / CUDA / Apple Metal via Taichi)."
readme = "README.md"
# Capped below 3.13: Taichi wheels lag the newest CPython (see AGENT.md §11 RV3).
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [
    { name = "Pouya Lajevardi" },
]
keywords = ["n-body", "particle-mesh", "astrophysics", "taichi", "gpu", "simulation"]

dependencies = [
    "taichi>=1.7.0",
    "numpy>=1.24",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# CUDA-only zero-padded FFT validation oracle (Stage 4); never required on the Apple/production path.
cuda = ["cupy-cuda12x>=12.0"]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
hello-sim = "galaxy_collision.sim:hello_sim_cli"

[project.urls]
Homepage = "https://github.com/pouyalj/Galaxy-Collision-with-CUDA-FFT"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxy_collision"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
