[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "galaxy-collision"
version = "0.0.0"
description = "Cross-platform Particle-Mesh N-body simulation of a Milky Way x Andromeda galaxy collision (CPU / CUDA / Apple Metal via Taichi)."
readme = "README.md"
# Capped below 3.13: Taichi wheels lag the newest CPython (see AGENT.md §11 RV3).
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [
    { name = "Pouya Lajevardi" },
]
keywords = ["n-body", "particle-mesh", "astrophysics", "taichi", "gpu", "simulation"]

dependencies = [
    "taichi>=1.7.0",
    "numpy>=1.24",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# CUDA-only zero-padded FFT validation oracle (Stage 4/5C); never required on the Apple/production
# path. The [ctk] extra pulls the CUDA toolkit wheels (nvrtc + headers) CuPy needs to JIT its
# elementwise kernels — without them only precompiled cuFFT works, not the Green's-function build.
cuda = ["cupy-cuda12x[ctk]>=12.0"]
# Movie encoding (Stage 7): density-projection frames → MP4/GIF. imageio-ffmpeg bundles the ffmpeg
# binary, so no system install is needed. matplotlib (figures) is already a core dependency.
viz = ["imageio>=2.31", "imageio-ffmpeg>=0.4"]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
hello-sim = "galaxy_collision.sim:hello_sim_cli"
galaxy-sim = "galaxy_collision.sim:run_sim_cli"
galaxy-bench = "galaxy_collision.bench:bench_cli"
galaxy-movie = "galaxy_collision.viz.movie:galaxy_movie_cli"
paper-repro = "galaxy_collision.viz.paper_repro:paper_repro_cli"

[project.urls]
Homepage = "https://github.com/pouyalj/Galaxy-Collision-with-CUDA-FFT"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxy_collision"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
